--- a/index.html
+++ b/index.html
@@ -11,22 +11,22 @@
         <div class="bx score-box">
             <ul>
                 <li class="scoreTitle">Player Score</li>
-                <li id="playerScoreBoard"></li>
+                <li id="playerScoreBoard">0</li>
             </ul>
             <ul>
                 <li class="scoreTitle">Computer Score</li>
-                <li id="computerScoreBoard"></li>
+                <li id="computerScoreBoard">0</li>
             </ul>
         </div>
         <div class="bx selection-box">
             <div class="bx competitors-box">
                 <div class="bx player-box">
                     <h1>Player Selection:</h1> 
-                    <h2 id="playerSelection"></h2>
+                    <div id="player-img"></div>
                 </div>
                 <div class="bx computer-box">
                     <h1>Computer Selection:</h1>
-                    <h2 id="computerSelection"></h2>
+                    <div id="comp-img"></div>
                 </div>
             </div>
             <div class="bx outcome-box">
@@ -34,12 +34,11 @@
             </div>
         </div>
         <div class="bx button-box">
-            <button type="button" class="rainbow rainbow-3" id="rock">Rock</button>
-            <button type="button" class="rainbow rainbow-3" id="paper">Paper</button>
-            <button type="button" class="rainbow rainbow-3" id="scissors">Scissors</button>
+            <button id="rock"><img src="images/rock.png" alt="rock" width="200px" height="auto"></button>
+            <button id="paper"><img src="images/paper.png" alt="paper" width="200px" height="auto"></button>
+            <button id="scissors"><img src="images/scissors.png" alt="scissors" width="200px" height="auto"></button>
         </div>
     </div>
-
     <script src="script.js"></script>
 </body>
 </html>
